about section alignment is fixed and extra space below and above title is removed

--- a/src/assets/css/Intro.css
+++ b/src/assets/css/Intro.css
@@ -9,6 +9,12 @@ body{
             height: 19.375em;
             width: 14em;
         }
+		.carousel-inner-intro{
+			height: 500px;
+			position: relative;
+			overflow: hidden;
+			width: 100%;
+		}
 		.intro_text{
 			font-family: "Ubuntu","Uchen",sans-serif;
 		}
