--- a/src/assets/css/Testimonial.css
+++ b/src/assets/css/Testimonial.css
@@ -7,7 +7,6 @@
     background-clip: text;
     text-align: center;
     padding-top: 60px;
-    padding-bottom: 40px;
     -webkit-text-fill-color: transparent;
 }
 .carousel-bg {
