--- a/src/assets/css/tech.css
+++ b/src/assets/css/tech.css
@@ -15,6 +15,16 @@
     animation: floating 150s linear infinite;
   }
 
+  .skills_title{
+    font-size: 48px;
+    font-weight: bold;
+    background-image: linear-gradient(45deg, #f3ec78, #af4261);
+    background-clip: text;
+    text-align: center;
+    padding-top: 40px;
+    -webkit-text-fill-color: transparent;
+  }
+
   @keyframes floating {
     100% {
       background-position: 50px 0,125px 25px;
